# CS-301-Bootcamp

./: 0 - READ ME FIRST.md  1 - Create a Bootcamp Repository.md  2 - Setting up CLion IDE (if bringing own laptop).md  2 - Setting up VS Code IDE on Codespaces (if you plan on using a lab computer).md  3 - Testing the CLion IDE.md  3 - Testing the VS Code IDE.md  CMakeLists.txt  README.md
- Slides/: CS301_Bootcamp_Classes_and_Structs.pptx  CS301_Bootcamp_Handout_Classes.docx  CS301_Bootcamp_Handout_Link-List.docx  CS301_Bootcamp_Linked_Lists.pptx  CS301_Bootcamp_Pointer Practice - blank.pptx  CS301_Bootcamp_Types_and_Casting.pptx
Arrays/: - Arrays.md  CMakeLists.txt
Arrays/unit_tests/: ArrayTests.cpp
Classes/: CMakeLists.txt
Classes/unit_tests/: ClassTests.cpp
File Reading and Writing/: CMakeLists.txt
Linked Lists/: CMakeLists.txt  LinkList_Basic_Tests.cpp
Linked Lists/unit_tests/: link_list_tests.cpp
Loops/: Shape_Main.cpp
Pointers/: -- Pointer Practice.md  CMakeLists.txt
_IDE Hello World Test/: CMakeLists.txt  Hello_World.cpp
catch/: unit_test_utils.cpp
cin cout getline/: - Basic Input Output.md  CMakeLists.txt
